--- a/frontend-cemos/public/assets/content/intendencia/3-ema-401/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/3-ema-401/script/m1.md
@@ -1,18 +1,18 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova
 |---|---|---|---|---|---|---|---|---|---|---|
-| EMA-401 | Pág 1 | Cap. 1 - Disposições Gerais | De acordo com a conceituação apresentada no Capítulo 1, qual é a finalidade da Mobilização Nacional? | Substituir integralmente a Logística Nacional em tempos de paz. | Complementar a Logística Nacional para capacitar o país a realizar ações estratégicas de Defesa diante de agressão estrangeira. | Gerenciar exclusivamente os recursos da Marinha do Brasil sem interação com outros órgãos. | Privatizar os setores de defesa para garantir maior eficiência econômica. | b | Conforme o **item 1.1**, a Mobilização tem a finalidade de complementar a Logística quando se esgotar a capacidade desta no atendimento das necessidades requeridas. | |
-| EMA-401 | Pág 2 | Cap. 1 - Disposições Gerais | Como é estruturado o Subsistema Setorial de Mobilização Militar (SISMOMIL) dentro do Sistema Nacional de Mobilização (SINAMOB)? | É coordenado pelo Exército Brasileiro e composto apenas pelas forças terrestres. | É dirigido pelo Ministério da Justiça e integra as polícias estaduais. | Sob a direção e coordenação do Ministério da Defesa, é composto por este e pelas Forças Armadas através de seus respectivos sistemas (SIMOMAR, SIMOBE, SISMAERO). | É um órgão independente que reporta diretamente ao Congresso Nacional, sem vínculo com o Ministério da Defesa. | c | Conforme o texto da **página 2**, o SISMOMIL fica sob a direção e coordenação do MD, e compõem esse subsistema as Forças Armadas por intermédio de seus respectivos Sistemas de Mobilização. | |
-| EMA-401 | Pág 3 | Cap. 1 - Disposições Gerais | Segundo as definições do Capítulo 1, o que constitui o "Potencial Nacional"? | A capacidade imediata que a nação tem para alcançar os Objetivos Nacionais. | O conjunto de bens e serviços de defesa já produzidos e estocados. | O conjunto de recursos humanos e meios em estado latente, passíveis de serem transformados em poder. | A soma exclusiva das forças militares ativas em tempo de paz. | c | Conforme a definição no **subitem 1.2.5**, Potencial Nacional é o conjunto de recursos humanos e dos meios de que dispõe a nação, em estado latente, passíveis de serem transformados em poder. | |
-| EMA-401 | Pág 4 | Cap. 1 - Disposições Gerais | Qual termo define a característica que permite a uma força variar seu poder de combate pelo acréscimo ou supressão de estruturas ou meios adicionais? | Elasticidade. | Capacidade de Mobilização. | Hipótese de Emprego. | Logística Reversa. | a | Nos termos da definição do **subitem 1.2.7**, Elasticidade é a característica que permite variar o poder de combate pelo acréscimo ou supressão de estruturas. | |
-| EMA-401 | Pág 15 | Cap. 1 - Disposições Gerais | O que define a "Mobilização Marítima" no contexto das definições apresentadas? | O recrutamento de civis para atuar na marinha mercante em tempos de paz. | O conjunto de atividades sistêmicas empreendidas rotineiramente na MB para prever e planejar a complementação da logística da Força Naval. | A requisição imediata de todos os portos nacionais pelo Exército. | O deslocamento da esquadra para águas internacionais sem planejamento prévio. | b | Conforme a definição no **subitem 1.2.16**, Mobilização Marítima é o conjunto de atividades sistêmicas, empreendidas rotineiramente na MB, relativas à previsão das necessidades de complementação da logística da Força Naval. | |
-| EMA-401 | Pág 16 | Cap. 1 - Disposições Gerais | Como é caracterizada a "Fase de Preparo" da Mobilização? | Pela celeridade e compulsoriedade das ações após a decretação de guerra. | Pela realização de ações estratégicas mediante planejamento contínuo e permanente desde a situação de normalidade. | Pelo acionamento imediato da totalidade dos recursos do Poder Nacional. | Pela desmobilização dos recursos militares para economia de verbas. | b | Conforme o **item 1.4.1**, o Preparo da Mobilização consiste na realização de ações estratégicas, por meio de um planejamento adequado, desenvolvido desde a situação de normalidade. | |
-| EMA-401 | Pág 17 | Cap. 1 - Disposições Gerais | Qual é considerado o produto final da fase de preparo da Mobilização? | A decretação do Estado de Sítio. | O levantamento das Carências Logísticas. | O Plano Nacional de Mobilização (PNM). | A consolidação da Base Industrial de Defesa (BID). | c | Conforme o texto na **página 17 (item 1.4.1)**, o produto final da fase de preparo será o Plano Nacional de Mobilização (PNM). | |
-| EMA-401 | Pág 18 | Cap. 1 - Disposições Gerais | O que caracteriza a "Fase de Execução" da Mobilização e como ela é iniciada? | Caracteriza-se pelo planejamento lento e é iniciada pelo Congresso. | Caracteriza-se pela celeridade e compulsoriedade, iniciando-se por ato do Poder Executivo. | Caracteriza-se por testes simulados e inicia-se por ordem do Comandante da Marinha. | Caracteriza-se pela diplomacia e inicia-se após referendo popular. | b | Conforme o **item 1.4.2**, a Execução é caracterizada pela celeridade e compulsoriedade, e terá início por ato do Poder Executivo. | |
-| EMA-401 | Pág 19 | Cap. 1 - Disposições Gerais | Dentre os métodos para obtenção de recursos de "Pessoal" listados para situações de mobilização, qual das opções abaixo é citada no texto? | Confisco e Requisição. | Arrendamento mercantil e Troca. | Banco de talentos e Convocação. | Doação e Empréstimo. | c | Conforme a lista na alínea 'b' da **página 19**, são métodos para pessoal: banco de talentos, concurso, contratação, convocação, etc. | |
-| EMA-401 | Pág 20 | Cap. 1 - Disposições Gerais | No âmbito externo da Mobilização na Expressão Política, qual é o objetivo descrito? | Adequar a atividade legislativa à situação de guerra. | Empregar recursos diplomáticos para angariar apoio internacional e minimizar pressões externas. | Controlar a inflação decorrente do conflito. | Motivar a população através de propaganda psicológica. | b | Conforme o texto do **item 1.5.1**, no âmbito externo deve empregar os recursos diplomáticos para angariar o apoio da comunidade internacional e minimizar as pressões externas. | |
-| EMA-401 | Pág 21 | Cap. 1 - Disposições Gerais | Na Expressão Política, qual atividade é destacada como responsabilidade do Poder Legislativo? | A condução e fiscalização do processo administrativo. | A dinamização do processo de aplicação das leis. | A adequação da legislação e a elaboração de novos instrumentos legais. | O cadastramento industrial para conversão de linhas de produção. | c | Conforme a alínea 'b' do **item 1.5.1**, compete ao Poder Legislativo a adequação da legislação e a elaboração de novos instrumentos legais. | |
-| EMA-401 | Pág 22 | Cap. 1 - Disposições Gerais | Como é definida a "Mobilização Industrial" dentro da Expressão Econômica? | A estatização de todas as indústrias de bens de consumo. | Um conjunto de atividades para adequar a capacidade industrial da nação ao atendimento das necessidades militares e civis em emergências. | A proibição da produção de bens civis para focar apenas em armamentos. | A transferência de todo o parque industrial para zonas seguras no interior do país. | b | Conforme a definição no **item 1.5.2 (Página 22)**, a Mobilização Industrial visa adequar a capacidade industrial da nação ao atendimento das necessidades militares e civis. | |
-| EMA-401 | Pág 23 | Cap. 1 - Disposições Gerais | Qual é apontado como o "grande desafio" da Mobilização Industrial? | A rápida adaptação da indústria para a produção de itens militares, paralelamente ao atendimento das necessidades civis. | A total eliminação da dependência de insumos externos. | A conversão de indústrias de base em indústrias de serviços. | O aumento da carga tributária para financiar a guerra sem gerar inflação. | a | Conforme o texto na **página 23 (item 1.5.2)**, o grande desafio será a rápida adaptação da indústria para a produção de itens de interesse militar, paralelamente ao atendimento das necessidades civis. | |
-| EMA-401 | Pág 24 | Cap. 1 - Disposições Gerais | Qual é o objetivo principal da Mobilização na Expressão Psicossocial? | Garantir o fluxo financeiro para o esforço de guerra. | A formação e a consolidação de uma Mentalidade de Mobilização. | O recrutamento obrigatório de jovens para as Forças Armadas. | A adaptação do parque industrial para produção bélica. | b | Conforme o **item 1.5.3**, o objetivo da Mobilização Psicossocial é a formação e a consolidação de uma Mentalidade de Mobilização. | |
-| EMA-401 | Pág 25 | Cap. 1 - Disposições Gerais | Qual medida é destacada para a Mobilização na Expressão Científica e Tecnológica visando contribuir com a defesa? | Redução de investimentos em tecnologias de alto custo. | Desenvolvimento da infraestrutura de ciência e tecnologia, incluindo a nuclear, para internalizar produtos estratégicos. | Compra exclusiva de pacotes tecnológicos fechados do exterior. | Foco apenas em tecnologias de uso civil, descartando o uso dual. | b | Conforme a alínea 'a' do **item 1.5.5**, destaca-se o desenvolvimento da infraestrutura de ciência e tecnologia, incluindo a nuclear, com o intuito de internalizar no país os produtos de alto conteúdo tecnológico. | |
-| EMA-401 | Pág 26 | Cap. 1 - Disposições Gerais | No contexto da Mobilização na Área de Segurança, qual atividade é especificamente atribuída à Marinha do Brasil (MB)? | Policiamento ostensivo nas grandes capitais. | Controle de tráfego aéreo em zonas de combate. | Provimento da proteção e da segurança das vias navegáveis interiores, portos e Linhas de Comunicação Marítimas. | Gestão dos órgãos de defesa civil estaduais. | c | Conforme a alínea 'b' do **item 1.6**, compete à MB o provimento da proteção e da segurança das vias navegáveis interiores / Linhas de Comunicação Marítimas (LCM), dos portos, etc. | |
+| EMA-401 | Pág 1 | Cap. 1 - Disposições Gerais | De acordo com a conceituação apresentada no Capítulo 1, qual é a finalidade da Mobilização Nacional? | Substituir integralmente a Logística Nacional em tempos de paz. | Complementar a Logística Nacional para capacitar o país a realizar ações estratégicas de Defesa diante de agressão estrangeira. | Gerenciar exclusivamente os recursos da Marinha do Brasil sem interação com outros órgãos. | Privatizar os setores de defesa para garantir maior eficiência econômica. | b | Conforme o **item 1.1**, a Mobilização tem a finalidade de complementar a Logística quando se esgotar a capacidade desta no atendimento das necessidades requeridas.|  |  |
+| EMA-401 | Pág 2 | Cap. 1 - Disposições Gerais | Como é estruturado o Subsistema Setorial de Mobilização Militar (SISMOMIL) dentro do Sistema Nacional de Mobilização (SINAMOB)? | É coordenado pelo Exército Brasileiro e composto apenas pelas forças terrestres. | É dirigido pelo Ministério da Justiça e integra as polícias estaduais. | Sob a direção e coordenação do Ministério da Defesa, é composto por este e pelas Forças Armadas através de seus respectivos sistemas (SIMOMAR, SIMOBE, SISMAERO). | É um órgão independente que reporta diretamente ao Congresso Nacional, sem vínculo com o Ministério da Defesa. | c | Conforme o texto da **página 2**, o SISMOMIL fica sob a direção e coordenação do MD, e compõem esse subsistema as Forças Armadas por intermédio de seus respectivos Sistemas de Mobilização.|  |  |
+| EMA-401 | Pág 3 | Cap. 1 - Disposições Gerais | Segundo as definições do Capítulo 1, o que constitui o "Potencial Nacional"? | A capacidade imediata que a nação tem para alcançar os Objetivos Nacionais. | O conjunto de bens e serviços de defesa já produzidos e estocados. | O conjunto de recursos humanos e meios em estado latente, passíveis de serem transformados em poder. | A soma exclusiva das forças militares ativas em tempo de paz. | c | Conforme a definição no **subitem 1.2.5**, Potencial Nacional é o conjunto de recursos humanos e dos meios de que dispõe a nação, em estado latente, passíveis de serem transformados em poder.|  |  |
+| EMA-401 | Pág 4 | Cap. 1 - Disposições Gerais | Qual termo define a característica que permite a uma força variar seu poder de combate pelo acréscimo ou supressão de estruturas ou meios adicionais? | Elasticidade. | Capacidade de Mobilização. | Hipótese de Emprego. | Logística Reversa. | a | Nos termos da definição do **subitem 1.2.7**, Elasticidade é a característica que permite variar o poder de combate pelo acréscimo ou supressão de estruturas.|  |  |
+| EMA-401 | Pág 15 | Cap. 1 - Disposições Gerais | O que define a "Mobilização Marítima" no contexto das definições apresentadas? | O recrutamento de civis para atuar na marinha mercante em tempos de paz. | O conjunto de atividades sistêmicas empreendidas rotineiramente na MB para prever e planejar a complementação da logística da Força Naval. | A requisição imediata de todos os portos nacionais pelo Exército. | O deslocamento da esquadra para águas internacionais sem planejamento prévio. | b | Conforme a definição no **subitem 1.2.16**, Mobilização Marítima é o conjunto de atividades sistêmicas, empreendidas rotineiramente na MB, relativas à previsão das necessidades de complementação da logística da Força Naval.|  |  |
+| EMA-401 | Pág 16 | Cap. 1 - Disposições Gerais | Como é caracterizada a "Fase de Preparo" da Mobilização? | Pela celeridade e compulsoriedade das ações após a decretação de guerra. | Pela realização de ações estratégicas mediante planejamento contínuo e permanente desde a situação de normalidade. | Pelo acionamento imediato da totalidade dos recursos do Poder Nacional. | Pela desmobilização dos recursos militares para economia de verbas. | b | Conforme o **item 1.4.1**, o Preparo da Mobilização consiste na realização de ações estratégicas, por meio de um planejamento adequado, desenvolvido desde a situação de normalidade.|  |  |
+| EMA-401 | Pág 17 | Cap. 1 - Disposições Gerais | Qual é considerado o produto final da fase de preparo da Mobilização? | A decretação do Estado de Sítio. | O levantamento das Carências Logísticas. | O Plano Nacional de Mobilização (PNM). | A consolidação da Base Industrial de Defesa (BID). | c | Conforme o texto na **página 17 (item 1.4.1)**, o produto final da fase de preparo será o Plano Nacional de Mobilização (PNM).|  |  |
+| EMA-401 | Pág 18 | Cap. 1 - Disposições Gerais | O que caracteriza a "Fase de Execução" da Mobilização e como ela é iniciada? | Caracteriza-se pelo planejamento lento e é iniciada pelo Congresso. | Caracteriza-se pela celeridade e compulsoriedade, iniciando-se por ato do Poder Executivo. | Caracteriza-se por testes simulados e inicia-se por ordem do Comandante da Marinha. | Caracteriza-se pela diplomacia e inicia-se após referendo popular. | b | Conforme o **item 1.4.2**, a Execução é caracterizada pela celeridade e compulsoriedade, e terá início por ato do Poder Executivo.|  |  |
+| EMA-401 | Pág 19 | Cap. 1 - Disposições Gerais | Dentre os métodos para obtenção de recursos de "Pessoal" listados para situações de mobilização, qual das opções abaixo é citada no texto? | Confisco e Requisição. | Arrendamento mercantil e Troca. | Banco de talentos e Convocação. | Doação e Empréstimo. | c | Conforme a lista na alínea 'b' da **página 19**, são métodos para pessoal: banco de talentos, concurso, contratação, convocação, etc.|  |  |
+| EMA-401 | Pág 20 | Cap. 1 - Disposições Gerais | No âmbito externo da Mobilização na Expressão Política, qual é o objetivo descrito? | Adequar a atividade legislativa à situação de guerra. | Empregar recursos diplomáticos para angariar apoio internacional e minimizar pressões externas. | Controlar a inflação decorrente do conflito. | Motivar a população através de propaganda psicológica. | b | Conforme o texto do **item 1.5.1**, no âmbito externo deve empregar os recursos diplomáticos para angariar o apoio da comunidade internacional e minimizar as pressões externas.|  |  |
+| EMA-401 | Pág 21 | Cap. 1 - Disposições Gerais | Na Expressão Política, qual atividade é destacada como responsabilidade do Poder Legislativo? | A condução e fiscalização do processo administrativo. | A dinamização do processo de aplicação das leis. | A adequação da legislação e a elaboração de novos instrumentos legais. | O cadastramento industrial para conversão de linhas de produção. | c | Conforme a alínea 'b' do **item 1.5.1**, compete ao Poder Legislativo a adequação da legislação e a elaboração de novos instrumentos legais.|  |  |
+| EMA-401 | Pág 22 | Cap. 1 - Disposições Gerais | Como é definida a "Mobilização Industrial" dentro da Expressão Econômica? | A estatização de todas as indústrias de bens de consumo. | Um conjunto de atividades para adequar a capacidade industrial da nação ao atendimento das necessidades militares e civis em emergências. | A proibição da produção de bens civis para focar apenas em armamentos. | A transferência de todo o parque industrial para zonas seguras no interior do país. | b | Conforme a definição no **item 1.5.2 (Página 22)**, a Mobilização Industrial visa adequar a capacidade industrial da nação ao atendimento das necessidades militares e civis.|  |  |
+| EMA-401 | Pág 23 | Cap. 1 - Disposições Gerais | Qual é apontado como o "grande desafio" da Mobilização Industrial? | A rápida adaptação da indústria para a produção de itens militares, paralelamente ao atendimento das necessidades civis. | A total eliminação da dependência de insumos externos. | A conversão de indústrias de base em indústrias de serviços. | O aumento da carga tributária para financiar a guerra sem gerar inflação. | a | Conforme o texto na **página 23 (item 1.5.2)**, o grande desafio será a rápida adaptação da indústria para a produção de itens de interesse militar, paralelamente ao atendimento das necessidades civis.|  |  |
+| EMA-401 | Pág 24 | Cap. 1 - Disposições Gerais | Qual é o objetivo principal da Mobilização na Expressão Psicossocial? | Garantir o fluxo financeiro para o esforço de guerra. | A formação e a consolidação de uma Mentalidade de Mobilização. | O recrutamento obrigatório de jovens para as Forças Armadas. | A adaptação do parque industrial para produção bélica. | b | Conforme o **item 1.5.3**, o objetivo da Mobilização Psicossocial é a formação e a consolidação de uma Mentalidade de Mobilização.|  |  |
+| EMA-401 | Pág 25 | Cap. 1 - Disposições Gerais | Qual medida é destacada para a Mobilização na Expressão Científica e Tecnológica visando contribuir com a defesa? | Redução de investimentos em tecnologias de alto custo. | Desenvolvimento da infraestrutura de ciência e tecnologia, incluindo a nuclear, para internalizar produtos estratégicos. | Compra exclusiva de pacotes tecnológicos fechados do exterior. | Foco apenas em tecnologias de uso civil, descartando o uso dual. | b | Conforme a alínea 'a' do **item 1.5.5**, destaca-se o desenvolvimento da infraestrutura de ciência e tecnologia, incluindo a nuclear, com o intuito de internalizar no país os produtos de alto conteúdo tecnológico.|  |  |
+| EMA-401 | Pág 26 | Cap. 1 - Disposições Gerais | No contexto da Mobilização na Área de Segurança, qual atividade é especificamente atribuída à Marinha do Brasil (MB)? | Policiamento ostensivo nas grandes capitais. | Controle de tráfego aéreo em zonas de combate. | Provimento da proteção e da segurança das vias navegáveis interiores, portos e Linhas de Comunicação Marítimas. | Gestão dos órgãos de defesa civil estaduais. | c | Conforme a alínea 'b' do **item 1.6**, compete à MB o provimento da proteção e da segurança das vias navegáveis interiores / Linhas de Comunicação Marítimas (LCM), dos portos, etc.|  |  |
