--- a/frontend-cemos/public/assets/content/direito/4-feridos-enfermos/1.md
+++ b/frontend-cemos/public/assets/content/direito/4-feridos-enfermos/1.md
@@ -1,5 +1,6 @@
 ## Página 1
-# DECRETO Nº 42.121, DE 21 DE AGOSTO DE 1957
+
+# Decreto nº 42.121, de 21 de agosto de 1957
 
 Promulga as convenções concluídas em Genebra a 12 de agosto de 1949, destinadas a proteger vítimas de defesa.
 
