--- a/frontend-cemos/public/assets/content/economia/1-economia-br/script/10c.md
+++ b/frontend-cemos/public/assets/content/economia/1-economia-br/script/10c.md
@@ -15,7 +15,7 @@ Preenchimento dos campos:
 
     bibliografia_id" será preenchido com 'Economia Brasileira Contemporânea'.
 paginas será preenchido com o markador ## referente a página ex: se ## Página 11 então 'Pág 11 ...'
-assunto deve ser exatamente 'Cap. 7 – Investimento'.
+    assunto deve ser 'Cap.10 - Setor Externo'.
 pergunta: comando de associação (ex.: Relacione os autores às suas teorias).
 coluna_a: lista JSON.
 coluna_b: lista JSON.
