--- a/frontend-cemos/public/assets/content/economia/1-economia-br/script/10m.md
+++ b/frontend-cemos/public/assets/content/economia/1-economia-br/script/10m.md
@@ -15,8 +15,8 @@ Gere perguntas que testem conceitos-chave, autores, teorias, eventos:
 
     bibliografia_id" será preenchido com 'Economia Brasileira Contemporânea'.
 “paginas” será preenchido com o markador ## referente a página ao qual se refere, ex: se ## Página 11 então 'Pág 11 ...'
+    assunto deve ser 'Cap.10 - Setor Externo'.
 pergunta: texto completo da questão.
-assunto deve ser exatamente 'Cap. 7 – Investimento'.
 alternativa_a até alternativa_d: alternativas de resposta.
 resposta_correta: letra da alternativa correta (a, b, c ou d).
 justificativa_resposta_certa:
